force-app/main/default/objects/Room__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>ENTER THE HOTEL TO WHICH THE ROOM IS ASSOCIATED.</description>
    <inlineHelpText>ENTER THE HOTEL TO WHICH THE ROOM IS ASSOCIATED.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rooms</relationshipLabel>
    <relationshipName>Rooms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>