force-app/main/default/objects/Room__c/fields/Price_of_the_Room__c.field-meta.xml
<CustomField>
    <fullName>Price_of_the_Room__c</fullName>
    <description>Price of the Room</description>
    <label>Price of the Room</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>