force-app/main/default/objects/Room__c/fields/Room_Name__c.field-meta.xml
<CustomField>
    <fullName>Room_Name__c</fullName>
    <label>Room Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>