force-app/main/default/objects/Room__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <inlineHelpText>Type of the room.</inlineHelpText>
    <label>Room Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>