force-app/main/default/objects/Room__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Room_Name__c</columns>
    <columns>Room_Type__c</columns>
    <columns>Price_of_the_Room__c</columns>
    <columns>Room_Booked__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>